[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "be-topics"
version = "0.1.0"
description = "BrightEdge Topic Extraction Engine (NLTK-based)"
authors = [
  { name = "Archit", email = "archit@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["nlp", "topics", "scraping", "seo"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
  "tldextract>=5.1",
  "chardet>=5.2",
  "nltk>=3.8",
  "playwright>=1.47; platform_system != 'Windows'",
  "scikit-learn>=1.4",
]

[project.scripts]
be-topics = "be_topics.__main__:main"

